Revise "Combination Sum II" problem